Fixed header wrap on mobile

--- a/mixins.scss
+++ b/mixins.scss
@@ -10,7 +10,8 @@
           height: 82px;
         }
         h1 {
-          align-self: flex-end;
+          width: 80px;
+          padding: 0 0 0 13px;
           font-size: 2rem;
         }
       }
