--- a/style.scss
+++ b/style.scss
@@ -29,7 +29,7 @@ header {
     h1 {
       align-self: flex-end;
       margin: 0;
-      padding: 0 0 0 27px;
+      padding: 0 0 0 24px;
       font-size: 3.3rem;
     }
   }
